<?xml version="1.0" encoding="UTF-8"?>
<!--                                                                                  -->
<!-- Copyright 2002-2026 Echo Three, LLC                                              -->
<!--                                                                                  -->
<!-- Licensed under the Apache License, Version 2.0 (the "License");                  -->
<!-- you may not use this file except in compliance with the License.                 -->
<!-- You may obtain a copy of the License at                                          -->
<!--                                                                                  -->
<!--     http://www.apache.org/licenses/LICENSE-2.0                                   -->
<!--                                                                                  -->
<!-- Unless required by applicable law or agreed to in writing, software              -->
<!-- distributed under the License is distributed on an "AS IS" BASIS,                -->
<!-- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.         -->
<!-- See the License for the specific language governing permissions and              -->
<!-- limitations under the License.                                                   -->
<!--                                                                                  -->
<project name="cms" default="war" basedir=".">

    <property file="build.properties"/>
    <property file="${component.home}/environment.properties"/>
    <property file="${component.home}/build.properties"/>

    <path id="build.classpath">
        <fileset dir="${lib.dir}">
            <include name="**/*.jar" />
            <exclude name="pmd/lib/*.jar" />
        </fileset>
        <fileset dir="${build.lib.dir}">
            <include name="**/*.jar" />
        </fileset>
        <pathelement location="${build.dir}/jars/echothree-client.jar"/>
    </path>

    <target name="prepare">
        <mkdir dir="${ui.web.cms.classbindir}" />
        <mkdir dir="${ui.web.cms.metadatabindir}" />
        <mkdir dir="${ui.web.cms.wardir}" />
    </target>

    <target name="compile" depends="prepare">
        <path id="processorpath.ref">
            <pathelement location="${build.lib.dir}/error_prone_core-with-dependencies.jar"/>
            <pathelement location="${build.lib.dir}/error_prone_annotation.jar"/>
            <pathelement location="${build.lib.dir}/error_prone_annotations.jar"/>
            <pathelement location="${build.lib.dir}/error_prone_type_annotations.jar"/>
            <pathelement location="${build.lib.dir}/error_prone_check_api.jar"/>
            <pathelement location="${build.lib.dir}/java-diff-utils.jar"/>
            <pathelement location="${build.lib.dir}/dataflow-errorprone.jar"/>
            <pathelement location="${build.lib.dir}/failureaccess.jar"/>
            <pathelement location="${build.lib.dir}/jFormatString.jar"/>
            <pathelement location="${build.lib.dir}/threeten-extra.jar"/>
        </path>
        <javac
            fork="true"
            debug="on"
            srcdir="${ui.web.cms.javasrc}"
            destdir="${ui.web.cms.classbindir}"
            includeAntRuntime="false"
            classpathref="build.classpath" >
            <compilerarg value="-processorpath"/>
            <compilerarg pathref="processorpath.ref"/>
            <!-- Begin Error Prone -->
            <!-- fork="true" is also required for Error Prone -->
            <compilerarg value="-XDcompilePolicy=simple"/>
            <compilerarg value="--should-stop=ifError=FLOW" />
            <compilerarg value="-Xplugin:ErrorProne -Xep:DeadException:ERROR" />
            <compilerarg value="-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED"/>
            <compilerarg value="-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED"/>
            <compilerarg value="-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED"/>
            <compilerarg value="-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED"/>
            <compilerarg value="-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED"/>
            <compilerarg value="-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED"/>
            <compilerarg value="-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED"/>
            <compilerarg value="-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"/>
            <compilerarg value="-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED"/>
            <compilerarg value="-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED"/>
            <!-- End Error Prone -->
            <compilerarg value="-Xlint:-options" />
            <!-- <compilerarg value="-Xlint:deprecation" /> -->
            <!-- <compilerarg value="-Xlint:unchecked" /> -->
        </javac>
    </target>

    <target name="war" depends="compile">
        <manifest file="${ui.web.cms.metadatabindir}/MANIFEST.MF">
            <attribute name="Dependencies" value="org.infinispan services"/>
        </manifest>
        <war
            warfile="${ui.web.cms.warfile}"
            webxml="${ui.web.cms.metadatasrc}/web.xml"
            manifest="${ui.web.cms.metadatabindir}/MANIFEST.MF">
            <fileset dir="${ui.web.cms.websrc}" />
            <classes dir="${ui.web.cms.classbindir}"/>
            <classes dir="${ui.web.cms.metadatasrc}">
                <include name="*.properties"/>
            </classes>
            <webinf dir="${ui.web.cms.metadatasrc}">
                <include name="jboss-all.xml"/>
                <include name="struts-config.xml"/>
            </webinf>
            <!-- EchoThree and SSLExt -->
            <lib dir="${component.home}/build/jars">
                <include name="echothree-client.jar"/>
            </lib>
            <webinf dir="${build.dir}/metadata/client/taglib">
                <include name="*.tld"/>
            </webinf>
            <lib dir="${build.lib.dir}">
                <include name="textile4j.jar"/>
                <include name="nekohtml.jar"/>
                <include name="guava.jar"/>
                <include name="failureaccess.jar" />
            </lib>
            <!-- Apache Commons Lang -->
            <lib dir="${build.lib.dir}">
                <include name="commons-lang.jar"/>
            </lib>
            <!-- EZMorph -->
            <lib dir="${build.lib.dir}">
                <include name="ezmorph.jar"/>
            </lib>
            <!-- JSON-lib -->
            <lib dir="${build.lib.dir}">
                <include name="json-lib-jdk15.jar"/>
            </lib>
            <!-- iText -->
            <lib dir="${build.lib.dir}">
                <include name="itext.jar"/>
            </lib>
            <!-- Xerces -->
            <lib dir="${build.lib.dir}">
                <include name="xercesImpl.jar"/>
                <include name="xml-apis.jar"/>
            </lib>
            <!-- Commons Validator -->
            <lib dir="${build.lib.dir}">
                <include name="commons-validator.jar"/>
            </lib>
            <!-- ROME -->
            <lib dir="${build.lib.dir}">
                <include name="jdom.jar"/>
                <include name="rome.jar"/>
            </lib>
            <!-- FastClasspathScanner -->
            <lib dir="${build.lib.dir}">
                <include name="classgraph.jar"/>
            </lib>
            <!-- ICU4J -->
            <lib dir="${build.lib.dir}">
                <include name="icu4j.jar"/>
            </lib>
            <!-- Struts -->
            <lib dir="${build.lib.dir}">
                <include name="commons-beanutils.jar"/>
                <include name="commons-collections.jar"/>
                <include name="commons-digester.jar"/>
                <include name="commons-fileupload.jar"/>
                <include name="commons-io.jar"/>
                <include name="commons-logging.jar"/>
            </lib>
            <lib dir="${lib.dir}/struts">
                <include name="bsf.jar"/>
                <include name="commons-chain.jar"/>
                <include name="oro.jar"/>
                <include name="struts-core.jar"/>
                <include name="struts-el.jar"/>
                <include name="struts-extras.jar"/>
                <include name="struts-faces.jar"/>
                <include name="struts-mailreader-dao.jar"/>
                <include name="struts-scripting.jar"/>
                <include name="struts-taglib.jar"/>
                <include name="struts-tiles.jar"/>
            </lib>
        </war>
    </target>

    <target name="deploy" depends="war">
        <copy file="${ui.web.cms.warfile}" todir="../../../${wildfly.home.deploy}" />
    </target>

    <target name="clean">
        <echo message="Deleting directory ${ui.web.cms.builddir}" />
        <delete includeemptydirs="true" quiet="true">
            <fileset dir="${ui.web.cms.builddir}">
                <include name="**" />
            </fileset>
        </delete>
    </target>

</project>

